fix server listener, add dummy response

--- a/client/src/main/resources/view/signup.fxml
+++ b/client/src/main/resources/view/signup.fxml
@@ -40,6 +40,6 @@
 
     </VBox>
 
-    <Text text="To Login" onMouseClicked="#navigateToSignIn"/>
+    <Text text="To login" onMouseClicked="#navigateToSignIn"/>
 
 </VBox>
