--- a/client/src/main/resources/view/chat.fxml
+++ b/client/src/main/resources/view/chat.fxml
@@ -15,15 +15,16 @@
         <RowConstraints maxHeight="0.0" minHeight="10.0" percentHeight="30.0" prefHeight="0.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <children>
-        <TextArea prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: green;"
-                  GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="chatTextArea"/>
-        <ListView prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: red;" GridPane.rowIndex="1"
+        <TextArea prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: gray;"
+                  GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="chatTextArea" wrapText="true"/>
+        <ListView prefHeight="Infinity" prefWidth="Infinity" style="fx-background-color: white" GridPane.rowIndex="1"
                   GridPane.rowSpan="3" fx:id="activeUserListView"/>
         <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="Infinity"
                 prefWidth="Infinity" text="refresh" onAction="#refreshUserList"/>
         <Button alignment="CENTER" mnemonicParsing="false" prefHeight="Infinity" prefWidth="Infinity" text="send"
                 GridPane.columnIndex="2" GridPane.rowIndex="2" onAction="#sendChat"/>
-        <Label prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: yellow;" GridPane.columnIndex="1"
-               GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS"/>
+        <Label prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: white;" GridPane.columnIndex="1"
+               GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" fx:id="chatLabel"
+               alignment="TOP_LEFT"/>
     </children>
 </GridPane>
