--- a/client/src/main/resources/view/chat.fxml
+++ b/client/src/main/resources/view/chat.fxml
@@ -23,8 +23,7 @@
                 prefWidth="Infinity" text="refresh" onAction="#refreshUserList"/>
         <Button alignment="CENTER" mnemonicParsing="false" prefHeight="Infinity" prefWidth="Infinity" text="send"
                 GridPane.columnIndex="2" GridPane.rowIndex="2" onAction="#sendChat"/>
-        <Label prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: white;" GridPane.columnIndex="1"
-               GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" fx:id="chatLabel"
-               alignment="TOP_LEFT"/>
+        <TextArea prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: white;" GridPane.columnIndex="1"
+               GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" fx:id="chatLabel" editable="false" wrapText="true"/>
     </children>
 </GridPane>
