--- a/client/src/main/resources/view/chat.fxml
+++ b/client/src/main/resources/view/chat.fxml
@@ -21,6 +21,8 @@
                   GridPane.rowSpan="3" fx:id="activeUserListView"/>
         <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="Infinity"
                 prefWidth="Infinity" text="refresh" onAction="#refreshUserList"/>
+        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="Infinity" prefWidth="Infinity" text="logout"
+                 GridPane.columnIndex="2" onAction="#signOut"/>
         <Button alignment="CENTER" mnemonicParsing="false" prefHeight="Infinity" prefWidth="Infinity" text="send"
                 GridPane.columnIndex="2" GridPane.rowIndex="2" onAction="#sendChat"/>
         <TextArea prefHeight="Infinity" prefWidth="Infinity" style="-fx-background-color: white;" GridPane.columnIndex="1"
